<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/kisanCalculatorToolbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/arithmeticFirstInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/arithmeticOperationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/arithmeticSecondInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/calculateArithmeticButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/arithmeticResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/profitCostInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/profitRevenueInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/calculateProfitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/profitResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/interestPrincipalInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/interestRateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/interestMonthsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/calculateInterestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/interestResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/landValueInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/landFromUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/landToUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/convertLandButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/landResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/grainValueInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/grainFromUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Spinner
        android:id="@+id/grainToUnitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/convertGrainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/grainResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
